# ESIOS

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUITING.md  CONTRIBUTING.md  ESIOS.py  Example with multiple Indicators and Multiples timeranges.ipynb  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  example.py  genindex.html  get_week_data_for_scheduling.py  index.html  indicadores.xlsx  modules.html  objects.inv  py-modindex.html  pyesios.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  pyesios.doctree
.github/workflows/: build_pages.yml  pr_validation.yml  publish.yml
_sources/: index.rst.txt  modules.rst.txt  pyesios.rst.txt
pyesios/: ESIOS.py  __init__.py  __version__.py  utils.py
tests/: test_download.py
tests/test_data/: export_SecondaryReserveAllocationAUpward_2023-10-24_18 32.csv
